Closed Bug 1247683 Opened 8 years ago Closed 8 years ago

[Coverity 1352115] Incorrect expression (SIZEOF_MISMATCH) in tls13_DestroyKeyShareEntry()

Categories

(NSS :: Libraries, defect)

defect
Not set
normal

Tracking

(firefox47 affected)

RESOLVED FIXED
Tracking Status
firefox47 --- affected

People

(Reporter: ttaubert, Assigned: ttaubert)

References

(Blocks 1 open bug)

Details

(Keywords: coverity)

*** CID 1352115:  Incorrect expression  (SIZEOF_MISMATCH)
/security/nss/lib/ssl/tls13con.c: 1230 in tls13_DestroyKeyShareEntry()
1224     }
1225     
1226     void
1227     tls13_DestroyKeyShareEntry(TLS13KeyShareEntry *offer)
1228     {
1229         SECITEM_ZfreeItem(&offer->key_exchange, PR_FALSE);
>>>     CID 1352115:  Incorrect expression  (SIZEOF_MISMATCH)
>>>     Passing argument "offer" of type "TLS13KeyShareEntry *" and argument "8UL /* sizeof (offer) */" to function "PORT_ZFree_Util" is suspicious.
1230         PORT_ZFree(offer, sizeof(offer));
1231     }
1232     
1233     void
1234     tls13_DestroyKeyShares(PRCList *list)
1235     {
Patch at: https://codereview.appspot.com/282570043
Flags: needinfo?(ekr)
https://hg.mozilla.org/projects/nss/rev/79df5a9a076c
Status: ASSIGNED → RESOLVED
Closed: 8 years ago
Flags: needinfo?(ekr)
Resolution: --- → FIXED
Target Milestone: --- → 3.23
You need to log in before you can comment on or make changes to this bug.